[project]
name = "context-mcp"
version = "0.1.0"
description = "A code review MCP server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "mcp>=0.4.0",
    "anyio>=4.5",
    "httpx>=0.27"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py310" 